# Shit-8

./: .gitignore  .gitmodules  CMakeLists.txt  Chip8.cpp  Chip8.hpp  Platform.cpp  Platform.hpp  README.md
src/: main.cpp
src/lib/: Chip8.cpp  Chip8.hpp  Platform.cpp  Platform.hpp
